[package]

name = "caliburn"
version = "0.0.1"
authors = ["Michael Holmes <holmesmich@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ceph3us/rust-caliburn"
homepage = "https://github.com/ceph3us/rust-caliburn"

# Blocked until libsyntax and new collections are frozen
# [dependencies.peg]
# git = "https://github.com/kevinmehall/rust-peg.git"
